# platform_utility

./: CMakeLists.txt  LICENSE  README.md
include/platform/: compiler.hpp  environment.hpp  intrin.hpp  os.hpp
include/platform/detail/: config.hpp
test/: CMakeLists.txt  compiler.cpp  environment.cpp  intrin.cpp  os.cpp
